--- a/shiny_dashboard_template.Rmd
+++ b/shiny_dashboard_template.Rmd
@@ -30,17 +30,33 @@ Column {.sidebar}
 boroughs = nyc_airbnb %>% 
   distinct(borough) %>% 
   pull()
-
 selectInput(
   inputId = 'borough_choice',
   label = h3('Borough Choice'), ## h3 is header size is 3
-  choices = boroughs
+  choices = boroughs,
+  selected = "Manhattan"
 )
 
 
 
 
+sliderInput(
+  inputId = "price_range",
+  label = h3("Price Range"),
+  min = 100, max = 1000, value = c(100, 250)
+)
 
+
+
+room_types = 
+  nyc_airbnb %>% 
+  distinct(room_type) %>% 
+  pull()
+radioButtons(
+  inputId = "room_choice",
+  label = h3("Room Type"),
+  choices = room_types
+)
 ```
 
 Column {data-width=650}
@@ -49,6 +65,19 @@ Column {data-width=650}
 ### Chart A
 
 ```{r}
+renderPlotly({
+nyc_airbnb %>% 
+  filter(
+    borough == input[["borough_choice"]],
+    price >= input[["price_range"]][1],
+    price <= input[["price_range"]][2],
+    room_type == input[["room_choice"]]) %>% 
+  plot_ly(x = ~lat, y = ~long, color = ~price,
+          type = "scatter", mode = "markers", alpha = .3)
+})
+
+
+
 renderPrint({
 input[["borough_choice"]]
   })
@@ -60,12 +89,25 @@ Column {data-width=350}
 ### Chart B
 
 ```{r}
+renderPlotly({
+  nyc_airbnb %>% 
+    filter(borough == input[["borough_choice"]],
+           room_type == input[["room_choice"]]) %>% 
+    count(neighbourhood) %>% 
+    mutate(neighbourhood = fct_reorder(neighbourhood, n)) %>% 
+    plot_ly(x = ~neighbourhood, y = ~n, color = ~neighbourhood, type = "bar")
+})
 
+renderPrint({
+input[["price_range"]]
+  })
 ```
 
 ### Chart C
 
 ```{r}
-
+renderPrint({
+input[["room_choice"]]
+  })
 ```
 
